tests/character_class_missing_right_bracket_diag/expected_diagnostics.txt
grammar.peg:1:9: error: Missing ']'.
 1 | Root <- [a-z
   |         ~
